Colaboratory를 통해 생성됨

--- a/Quset01/Quset01.ipynb
+++ b/Quset01/Quset01.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOgfm0B8gQKudKRs9qR1/rH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +24,32 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Isaiah0722/AIFFEL/blob/main/Quset01/Quset01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "word = input()\n",
+        "rWord = ''\n",
+        "\n",
+        "for i in word :\n",
+        "  rWord = i + rWord\n",
+        "print(rWord)\n",
+        "\n",
+        "if word == rWord:\n",
+        "  print('입력된 단어는 회문입니다.')\n",
+        "else:\n",
+        "  print('입력된 단어는 회문이 아닙니다.')\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "qm8U9Y0Cb4pR"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
