--- a/Quset01/Quset01.ipynb
+++ b/Quset01/Quset01.ipynb
@@ -28,14 +28,14 @@
     {
       "cell_type": "code",
       "source": [
-        "word = input()\n",
-        "rWord = ''\n",
+        "word = input()  #단어를 입력받습니다.\n",
+        "rWord = ''      #단어를 뒤집어 저장 할곳을 생성합니다.\n",
         "\n",
-        "for i in word :\n",
+        "for i in word : #입력된 단어를 뒤집어줍니다\n",
         "  rWord = i + rWord\n",
         "print(rWord)\n",
         "\n",
-        "if word == rWord:\n",
+        "if word == rWord: #입력받은 단어가 회문인지 아닌지 구별합니다.\n",
         "  print('입력된 단어는 회문입니다.')\n",
         "else:\n",
         "  print('입력된 단어는 회문이 아닙니다.')\n",
